# advent-of-code

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/exercise/: day_exercise.rs  exercises.rs  mod.rs  utils.rs
src/y2015/day_01/: README.md  runner.rs
src/y2015/day_02/: README.md  mod.rs  runner.rs
src/y2015/day_03/: README.md  runner.rs
src/y2015/day_04/: README.md  runner.rs
src/y2015/day_05/: README.md  runner.rs
src/y2015/day_06/: README.md  runner.rs
src/y2015/day_07/: README.md  mod.rs
src/y2023/: mod.rs
src/y2023/day_01/: README.md  runner.rs
src/y2023/day_02/: README.md  runner.rs
src/y2023/day_03/: README.md  runner.rs
src/y2023/day_04/: README.md  runner.rs
src/y2023/day_06/: runner.rs
src/y2023/day_08/: runner.rs
