[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Nicky van Urk <info@nickyvanurk.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = "0.11.0"
md5 = "0.7.0"
rayon = "1.7.0"
regex = "1.7.1"
